css/mobile-style.css
@media (max-width: 600px){
    :root{
        --title-font-size: 16px;
        --subtitle-font-size: 14px;
        --text-font-size: 12px;
        --huge-font-size: 24px;
    }

    .header-dropdown,.header-left,.dropdown-icon{
        width: 14%;
        justify-content: flex-start;
    }

    .header-top{
        padding: 12px 12px;
        width: auto;
    }

    .header-dropdown-content{
        padding-left: 12px;
    }

    /* Table styles */

    th,td{
        padding: 10px 20px;
    }

    .main-content{
        padding: 15px !important;
    }

    .index-main{
        gap: 20px !important;
    }

    #filter-input{
        gap: 10px;
    }

    #filter-input input{
        width: 50%;
    }

    .card{
       /* height: auto !important;*/
        height: 60vw !important;
        width: 40vw !important;
    }

    .card-content
    {
        padding-top: 4px !important;
        justify-content: flex-start !important;
    }

    /* Select styles */

    #lesson-filter{
        gap: 10px;
    }

    #lesson-filter select{
        width: 50%;
    }

    #left-divider{
        width: 50% !important;
    }

    #forum-post-button{
        width: 100% !important;
        display: flex;
        justify-content: center;
        
    }
    #left-divider button{
        width: 90% !important;
        font-size: var(--text-font-size) !important;
    }

    #right-divider{
        width: 50% !important;
    }
}

